--- a/Makefile.local
+++ b/Makefile.local
@@ -30,7 +30,7 @@ yasm_version 				= 1.2.0
 cmake_version				= 2.8.10.2
 gperf_version 				= 3.0.4
 expat_version 				= 2.1.0
-zlib_version 				= 1.2.7
+zlib_version 				= 1.2.8
 bzip2_version 				= 1.0.6
 libiconv_version 			= 1.14
 nettle_version				= 2.5
@@ -42,7 +42,7 @@ jpeg_version				= v9
 sdl_version					= 1.2.15
 alsa_version 				= 1.0.25
 freetype_version 			= 2.4.11
-libxml2_version 			= git
+libxml2_version 			= 2.9.0
 fontconfig_version 			= git
 libcddb_version				= 1.3.2
 taglib_version				= 1.8
@@ -667,7 +667,7 @@ $(zlib):
 
 $(zlib)/dezi.done:
 	cd $(zlib); \
-	./configure; \
+	./configure --64; \
 	sed -i 's/CC=gcc/CC=gcc -fPIC/g' Makefile; \
 	make; \
 	sudo make install; \
@@ -842,16 +842,15 @@ freetype: $(freetype) $(freetype)/dezi.done
 #
 
 $(libxml2): 
-	git clone git://git.gnome.org/libxml2 $(libxml2)
-	tar -cvzf $(libxml2).tar.gz $(libxml2)
-	mv $(libxml2).tar.gz ../download
+	#git clone git://git.gnome.org/libxml2 $(libxml2)
+	wget ftp://xmlsoft.org/libxml2/libxml2-sources-$(libxml2_version).tar.gz
+	tar -xvzf libxml2-sources-$(libxml2_version).tar.gz $(libxml2)
+	mv libxml2-sources-$(libxml2_version).tar.gz ../download
 
 $(libxml2)/dezi.done:
 	cd $(libxml2); \
-	export PKG_CONFIG_PATH="/usr/local/lib/pkgconfig"; \
-	./autogen.sh; \
-	./configure --enable-shared --enable-static; \
-	make; \
+	./configure --enable-shared --enable-static --with-zlib=/usr/local; \
+	make -j4; \
 	sudo make install; \
 	touch dezi.done
 
@@ -1035,6 +1034,7 @@ $(libmad):
 $(libmad)/dezi.done:
 	cd $(libmad); \
 	sed -i '/-fforce-mem/d' configure; \
+	export CFLAGS="-fPIC"; \
 	./configure; \
 	make; \
 	sudo make install; \
@@ -1251,6 +1251,7 @@ $(openjpeg):
 
 $(openjpeg)/dezi.done:
 	cd $(openjpeg); \
+	export CFLAGS="-fPIC"; \
 	./configure; \
 	make; \
 	sudo make install; \
@@ -1644,7 +1645,7 @@ mp4v2: $(mp4v2) $(mp4v2)/dezi.done
 #
 
 $(gpac):
-	svn co https://gpac.svn.sourceforge.net/svnroot/gpac/trunk/gpac $(gpac)
+	svn co https://svn.code.sf.net/p/gpac/code/trunk/gpac $(gpac)
 	tar -cvzf $(gpac).tar.gz  $(gpac)
 	mv -f $(gpac).tar.gz ../download
 
@@ -1656,7 +1657,7 @@ $(gpac)/dezi.configure: static
 		--enable-pic \
 		|| exit; \
 	echo "LDFLAGS=-L$$MYPWD/../static -lz" >> config.mak; \
-	echo "EXTRALIBS=" >> config.mak; \
+	echo "EXTRALIBS=-lz -lm" >> config.mak; \
 	touch dezi.configure
 
 $(gpac)/dezi.done:
