--- a/Makefile.ffmpeg-local
+++ b/Makefile.ffmpeg-local
@@ -45,6 +45,7 @@ $(ffmpeg)/libavfilter/vf_logo.c:
 	fi; \
 	
 ffmpeg-common = \
+	--disable-sse2 \
 	--enable-gpl \
 	--enable-version3 \
 	--enable-nonfree \
