--- a/fifoman/Makefile
+++ b/fifoman/Makefile
@@ -1,3 +1,3 @@
 all:
-	gcc -I /usr/local/include fifoman.c -o fifoman
+	gcc -I /usr/local/include fifoman.c -lavutil -lswscale -lavcodec -lpthread -o fifoman
 
