--- a/fifoman/Makefile
+++ b/fifoman/Makefile
@@ -1,3 +1,8 @@
 all:
-	gcc -I /usr/local/include fifoman.c -L../static -lavformat -lavcodec -lswresample -lswscale -lavutil -lpthread -lm -o fifoman
+	gcc -I /usr/local/include fifoman.c \
+		-lavfilter_pure -lavformat_pure \
+		-lavcodec_pure -lswresample_pure \
+		-lswscale_pure -lavutil_pure \
+		-lbz2 -lz -lm -lpthread \
+		-o fifoman
 
