--- a/fifoman/Makefile
+++ b/fifoman/Makefile
@@ -1,8 +1,10 @@
 all:
-	gcc -I /usr/local/include fifoman.c \
+	gcc fifoman.c -g \
+		-I /usr/local/include \
+		-I /usr/lib/arm-linux-gnueabihf/libzip/include \
 		-lavfilter_pure -lavformat_pure \
 		-lavcodec_pure -lswresample_pure \
 		-lswscale_pure -lavutil_pure \
-		-ljpeg -lbz2 -lz -lm -lpthread \
+		-ljpeg -lzip -lbz2 -lz -lm -lpthread \
 		-o fifoman
 
