--- a/fifoman/Makefile
+++ b/fifoman/Makefile
@@ -1,10 +1,10 @@
 all:
 	gcc fifoman.c -g \
-		-I /opt/local/include \
 		-I /usr/local/include \
-		-I /opt/local/lib/libzip/include \
+		-I /usr/local/lib/libzip/include \
 		-I /usr/lib/arm-linux-gnueabihf/libzip/include \
-		-L /opt/local/lib \
+		-I /usr/local/include \
+		-L /usr/local/lib \
 		-lavfilter_pure -lavformat_pure \
 		-lavcodec_pure -lswresample_pure \
 		-lswscale_pure -lavutil_pure \
